--- a/src/components/Containers/containers.scss
+++ b/src/components/Containers/containers.scss
@@ -5,8 +5,9 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background: url("../../assets/img/mainBg.png") no-repeat;
+  // background: url("../../assets/img/mainBg.png") no-repeat;
   background-position: center 30%;
+  background: rgba(0, 0, 0, 0.9);
   @media screen and (max-width: 767px) {
     background: url("../../assets/img/mainBgMob.png") no-repeat;
     background-position: center 90%;
