--- a/src/components/MainFooter/mainFooter.scss
+++ b/src/components/MainFooter/mainFooter.scss
@@ -2,6 +2,7 @@
   height: 221px;
   margin-top: 83px;
   padding-bottom: 49px;
+  z-index: 1;
   .container {
     height: 100%;
     display: flex;
@@ -19,14 +20,20 @@
       display: flex;
       align-items: center;
       text-align: center;
-      color: rgba(0, 0, 0, 0.8);
+      color: #dadada;
+      @media screen and (max-width: 767px) {
+        color: rgba(0, 0, 0, 1);
+      }
     }
     .footer__title {
       font-weight: bold;
       font-size: 30px;
       line-height: 37px;
-      color: #000000;
+      color: white;
       margin-bottom: 30px;
+      @media screen and (max-width: 767px) {
+        color: rgba(0, 0, 0, 0.9);
+      }
     }
     .footer__social-item {
       display: flex;
@@ -42,11 +49,14 @@
     text-align: end;
     font-size: 25px;
     line-height: 30px;
-    color: rgba(0, 0, 0, 0.8);
+    color: white;
+    @media screen and (max-width: 767px) {
+      color: rgba(0, 0, 0, 0.9);
+    }
   }
 }
 
-@media screen and (max-width: 1320px) {
+@media screen and (max-width: 1620px) {
   .footer {
     height: 162px;
     padding-bottom: 10px;
