--- a/src/pages/addposts.scss
+++ b/src/pages/addposts.scss
@@ -1,5 +1,6 @@
 @media screen and (max-width: 767px) {
-  .archive-page.add-page, .test-page {
+  .archive-page.add-page,
+  .test-page {
     .archive-background__item_main {
       width: 164%;
       position: absolute;
@@ -34,6 +35,7 @@
         top: 0;
         left: 0;
       }
+
     }
     .add-page__title {
       z-index: 2;
@@ -41,15 +43,16 @@
       font-size: 25px;
       line-height: 30px;
       text-align: center;
-      color: rgba(255, 255, 255, 0.95);
+      color: black;
       text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       margin-bottom: 60px;
     }
   }
 }
-.add-page, .archive-page {
+.add-page,
+.archive-page {
   .brand-card {
-    background: #DADADA;
+    background: #dadada;
     img {
       width: 100%;
       padding: 0;
