--- a/src/pages/archive.scss
+++ b/src/pages/archive.scss
@@ -8,6 +8,7 @@
     position: relative;
     padding-top: 35px;
     min-height: 100vh;
+    background-color: #fafafa;
     .archive-background__item {
       position: absolute;
     }
