--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -874,7 +874,7 @@
     .settings-block__close-btn span,
     .settings-block__close-btn span::before,
     .settings-block__close-btn span::after {
-      background-color: black;
+      // background-color: black;
     }
   }
   .win__cost {
