--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 58px;
+  transition: 0.5s;
   // min-height: 40vh;
   * {
     z-index: 2;
@@ -47,7 +48,6 @@
     }
   }
   .main-block__btn {
-
     &:active,
     &:hover {
       background-color: #17ca9b;
@@ -79,6 +79,7 @@
   margin-top: 195px;
   max-width: 1486px;
   width: 85%;
+  transition: 0.6s;
   // height: calc(100vh - 95px);
   p {
     text-align: center;
