--- a/src/pages/advertisers.scss
+++ b/src/pages/advertisers.scss
@@ -22,6 +22,10 @@
     }
   }
   .main-block {
+    min-height: calc(100vh - 206px);
+    @media screen and (min-width: 768px) {
+      min-height: unset;
+    }
     .main-block__feedback {
       margin-top: 30px;
       font-weight: 500;
@@ -64,19 +68,19 @@
       }
     }
   }
-  @media screen and (max-height: 875px) {
+  @media screen and (max-height: 875px) and (min-width: 768px) {
     .main-block .main-block__feedback {
       margin-top: 15px;
       font-size: 18px;
     }
   }
-  @media screen and (max-height: 867px) {
+  @media screen and (max-height: 867px) and (min-width: 768px) {
     .main-block {
       padding-top: 25px;
       margin-top: 10px;
     }
   }
-  @media screen and (max-height: 830px) {
+  @media screen and (max-height: 830px) and (min-width: 768px) {
     .main-block .main-block__btn {
       width: 436px;
       height: 67px;
@@ -89,7 +93,7 @@
       }
     }
   }
-  @media screen and (max-height: 775px) {
+  @media screen and (max-height: 775px) and (min-width: 768px) {
     .main-block {
       p {
         font-size: 31px;
